--- a/coffeeluv/docker-compose.yaml
+++ b/coffeeluv/docker-compose.yaml
@@ -4,9 +4,11 @@ services:
     restart: always
     ports:
       - "5432:5432"
-    environment:
-      POSTGRES_PASSWORD: secret
-      POSTGRES_USER: coffeeluv
+    env_file:
+      - ./.env.dev
+    # environment:
+    #   POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    #   POSTGRES_USER: ${POSTGRES_USER}
     volumes: 
       - coffeeluv:/var/lib/postgresql/data
 
