--- a/cf-gql-schema/package.json
+++ b/cf-gql-schema/package.json
@@ -13,6 +13,7 @@
     "start:dev": "cross-env STAGE=dev nest start --watch ",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "watch:types": "npx ts-node src/generate-types",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -35,6 +36,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "ts-morph": "^16.0.0",
     "typeorm": "^0.3.10"
   },
   "devDependencies": {
